# deepscraper

./: .env.example  .gitignore  CODEX_TASK.md  Dockerfile  Makefile  README.md  ai_plan_scenario_1.json  ai_plan_scenario_2.json  ai_plan_scenario_3.json  deepseek_real_plan.json  docker-compose.yml  parsing_results.json  pyproject.toml  real_ai_plan.json  simple_plan.json  test_advanced_parse.py  test_ai_complex.py  test_captcha_integration.py  test_captcha_service.py  test_complete_pipeline.py  test_deepseek_correct.py  test_deepseek_live.py  test_final.py  test_full_parse.py  test_parser.py  test_real_ai.py  test_smart_ai.py  test_stealth.py
src/deepscraper/: __init__.py  cli.py  config.py  logging.py
src/deepscraper/captcha/: base.py  capsolver.py  twocaptcha.py
src/deepscraper/exporters/: csv_exporter.py  excel_exporter.py  json_exporter.py
src/deepscraper/extractor/: dom.py  llm_fallback.py  network.py
src/deepscraper/pipeline/: db.py  models.py
src/deepscraper/pipeline/migrations/: 0001_initial.sql
src/deepscraper/planner/: deepseek_client.py  deepseek_real.py  deepseek_real_ai.py  deepseek_smart_emulation.py  schema.py
src/deepscraper/proxy/: manager.py
src/deepscraper/runner/: browser.py
src/deepscraper/tasks/: queue.py
src/deepscraper/utils/: randomize.py  snapshots.py  stealth.py  timing.py
src/deepscraper/web/: api.py
tests/: test_exporters.py  test_planner_schema.py  test_proxy_manager.py
